# chord-recognizer

./: .gitignore  pyproject.toml  todo.txt
chord_recognizer/: lyricsfetch.py  transcribe.py
